--- a/css/ui.css
+++ b/css/ui.css
@@ -89,10 +89,11 @@ img {
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.6), 0 2px 2px 0 rgba(0, 0, 0, 0.6), 0 1px 5px 0 rgba(0, 0, 0, 0.6);
 }
 .btn.btn-outline {
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.5rem;
   color: #000000;
   background-color: transparent;
   border: thin solid rgba(0, 0, 0, 0.8);
+  border-radius: 1rem;
 }
 .btn.btn-outline:hover {
   background-color: rgba(0, 0, 0, 0.15);
