--- a/sass/ui.scss
+++ b/sass/ui.scss
@@ -76,10 +76,11 @@ img {
 		}
 	}
 	&.btn-outline {
-		padding: 0.5rem 1rem;
+		padding: 0.5rem 1.5rem;
 		color: $black;
 		background-color: transparent;
 		border: thin solid rgba($black, 0.8);
+		border-radius: 1rem;
 		&:hover {
 			background-color: rgba($black, 0.15);
 			transition: all 1s ease-out;
