--- a/css/component.css
+++ b/css/component.css
@@ -14,7 +14,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 800px;
+  max-width: 900px;
 }
 @media (max-width: 680px) {
   .modal {
@@ -31,7 +31,7 @@
   .modal .modal-content {
     border: 1px solid rgba(0, 0, 0, 0.23);
     background-clip: padding-box;
-    border-radius: 4px;
+    border-radius: 1rem;
   }
 }
 @media (max-width: 680px) {
