--- a/sass/component.scss
+++ b/sass/component.scss
@@ -11,7 +11,7 @@
 	top: 50%;
 	transform:translate(-50%,-50%);
 	width: 100%;
-	max-width: 800px;
+	max-width: 900px;
 	@media (max-width: 680px) {
 		background-color: $white;
 	}
@@ -23,7 +23,7 @@
 		@media (min-width: 680px) {
 			border: 1px solid $light-gray;
 			background-clip: padding-box;
-			border-radius: 4px;
+			border-radius: 1rem;
 		}
 		@media (max-width: 680px) {
 			height: 100vh;
